# DeepGaze

./: .gitignore  .scale_batch_size_de56563d-c7db-4115-bae0-f207ccea8819.ckpt  README.md  data_utils.py  environment.yml  eyemind_env.yml  setup.cfg  sham_experiment.py
data_splits/: 4fold_participant.yml  4fold_participant_seed20.yml
docker/: Dockerfile
experiment_configs/: comprehension_nestedcv_config.yml  comprehension_nestedcv_config_encoderclassifiermodel.yml  encdec_multitask_config.yml  encdec_multitask_tuning_config.yml  fix_hyperparam_tuning_config.yml  fix_multiseq_config.yml  fix_testing_config.yml  inf_cluster_config.yml  inf_cluster_pretrainedencoder_config.yml  inf_comp_config.yml  inf_comp_freeze_enc_config.yml  inf_multiseq_config.yml  inf_multitask_config.yml  informer_test_config.yml  multitask_encdec.yml  multitask_informer_comp.yml  multitask_informer_pretraining.yml  multitask_informer_pretraining_folds.yml
notebooks/: add_gaze_features.ipynb  data_info.ipynb  data_loading (Rosy Southwell's conflicted copy 2024-09-30).ipynb  data_loading.ipynb  data_testing.ipynb  eval_pretrained_fi.py  export_folds.ipynb  filter_instances.ipynb  fixation_id.ipynb  get_predictions_for_plots.ipynb  get_predictions_for_stats.ipynb  lightning_cli_testing.ipynb  lightning_training.ipynb  load_ekta_feats.py  prediction_analysis.ipynb  regressions.ipynb  scanez_classifier_predict.py  tensorboard_results.ipynb  tensorboard_results_ICMI24.ipynb  tensorboard_results_new_pretasks.ipynb  tensorboard_results_scanEZ.ipynb  test.ipynb  test_enc_dec_cls_pipeline.py
(+256 files in other folders)
