[metadata]
name = eyemind
version = 0.0.1

[options]
packages = eyemind
install_requires =
    torch == 1.11.0
    pytorch-lightning == 1.6.0
    numpy == 1.21.5
    scikit-learn == 1.0.2
    pandas == 1.3.5
    torchmetrics == 0.7.2
    termcolor == 1.1.0
    matplotlib == 3.5.1
    torchvision == 0.12.0
    jsonargparse[signatures] == 4.7.3
    ray[tune] = 1.12.1