[metadata]
name = eyemind
version = 0.0.1

[options]
packages = eyemind
install_requires =
    torch == 1.12.1
    pytorch-lightning == 1.7.6
    numpy >= 1.21.5
    scikit-learn == 1.0.2
    pandas == 1.4.3
    torchmetrics == 0.7.2
    termcolor == 1.1.0
    matplotlib >= 3.5.1
    torchvision == 0.12.0
    ray[tune] == 2.0.0
    protobuf == 3.19.4
    jsonargparse[signatures] >= 4.12.0
# [options.extras_require]
# cuda112 =
#     cudatoolkit==11.2
